--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+	  command: sudo chmod +x ./gradlew
+      - run:
           name: Run UnitTest
           command: ./gradlew testDemoDebugUnitTest
       - run:
