--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,15 @@ jobs:
             sleep 30
             adb shell input keyevent 82
       - run:
-          name: Run EspressoTests
           command: ./gradlew connectedAndroidTest
+          name: Run EspressoTests
       - store_artifacts:
           path: app/build/reports
           destination: reports
       - store_test_results:
           path: app/build/test-results
+         - run:
+          name: Instrumentation testing
+          command: ./gradlew connectedCheck
+          environment:
+            TERM: dumb
