--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1') {
         exclude group: 'javax.inject'
     }
-
+    configurations {
+        androidTestCompile.exclude group: 'com.android.support', module: 'support-v4'
+    }
 
 }
