--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testApplicationId "com.example.test.test"
     }
     buildTypes {
         release {
@@ -42,8 +43,4 @@ dependencies {
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1') {
         exclude group: 'javax.inject'
     }
-    configurations {
-        androidTestCompile.exclude group: 'com.android.support', module: 'support-v4'
-    }
-
 }
